force-app/main/default/objects/custom_create215__c/custom_create215__c.object-meta.xml
<CustomObject>
    <label>Custom created object215</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects215</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>