force-app/main/default/objects/custom_create215__c/fields/custom_create_215field611__c.field-meta.xml
<CustomField>
    <fullName>custom_create_215field611__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 215field611</label>
    <type>Checkbox</type>
</CustomField>